# public_expenses_inspector

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
data/: df_ente.csv  df_ente.pckl  df_sub_fun.csv  df_sub_fun.pckl
public_expenses_inspector/: __main__.py
public_expenses_inspector/controllers/: dataProcessors.py  ente.py
public_expenses_inspector/data_sources/: sincofi.py
public_expenses_inspector/helpers/: captcha.py
public_expenses_inspector/models/: ente.py  mscOrcamentaria.py
tests/: test_public_expenses_inspector.py
